high-level send/recv functions that perform encryption/decryption
- sendMessage() that takes std::string and an optional AESParams for
encrypting. Converts the string into char*, encrypts if AESParams is
present, and sends.
- recvMessage() is essentially the reverse, receving a char*, decrypting
if AESParams is present, and storing the result back into a std::string.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,14 @@ set(AES-UTIL
 )
 
 set(NETWORKING-UTIL
-    src/networking/internal/socket-util.cpp
-    src/networking/internal/message-formatting.cpp
+    src/networking/client.cpp
+    src/networking/server.cpp
+
+    src/networking/internal/messaging.cpp
+    src/networking/internal/handshake.cpp
+
+    src/networking/internal/internal/socket-util.cpp
+    src/networking/internal/internal/message-formatting.cpp
 )
 
 set(SRC
