pushed send/recvMessage functions back one more layer
- pushed the send and recv functions that optionally take an AESParams
object back one layer, and enforce AESParams being present for all
messaging outside the handshake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ set(NETWORKING-UTIL
 
     src/networking/internal/internal/socket-util.cpp
     src/networking/internal/internal/message-formatting.cpp
+
+    src/networking/internal/internal/internal/socket-send-recv.cpp
 )
 
 set(SRC
